--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -229,11 +229,11 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-15-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/visuals.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Fifteen</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                                <a href="img/tm-img-15.jpg">View more</a>
+                                                <p class="tm-figure-description">Visual projection on screen.</p>
+                                                <a href="img/visuals.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
@@ -242,7 +242,7 @@ http://www.tooplate.com/view/2086-multi-color
                                             <img src="img/tm-img-16-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Sixteen</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <p class="tm-figure-description">Basic brush bot with minoture battery.</p>
                                                 <a href="img/tm-img-16.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
