--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -55,10 +55,10 @@ http://www.tooplate.com/view/2086-multi-color
                                     <!-- <a class="nav-link" href="#" data-no="1">Homepage <span class="sr-only">(current)</span></a> -->
                                 </li>                                
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#" data-no="2">Page 2</a>
+                                    <a class="nav-link" href="#0" data-no="2">Page 2</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#" data-no="3">Page 3</a>
+                                    <a class="nav-link" href="#0" data-no="3">Page 3</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#0" data-no="4">Page 4</a>
@@ -239,11 +239,11 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-16-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/closeup.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Sixteen</span></h2>
                                                 <p class="tm-figure-description">Basic brush bot with minoture battery.</p>
-                                                <a href="img/tm-img-16.jpg">View more</a>
+                                                <a href="img/closeup.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>                                                                       
@@ -262,17 +262,17 @@ http://www.tooplate.com/view/2086-multi-color
                                 <!-- Gallery Two pop up connected with JS code below -->
                                     
                                     <div class="tm-img-gallery-info-container">                                    
-                                        <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">Multi Two Gallery</span></h2>
-                                        <p class="tm-text"><span class="tm-white">Etiam gravida et elit vitae maximus. Pellentesque fringilla felis id feugiat consectetur. Sed quis commodo leo. Nunc aliquet auctor nunc, sit amet pharetra metus commodo ut.</span>
+                                        <h2 class="tm-text-title tm-gallery-title"><span class="tm-white"> Project Documentation Images</span></h2>
+                                        <p class="tm-text"><span class="tm-white">More work shown on this page.</span>
                                         </p>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-12-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/brushbot.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>One</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
-                                                <a href="img/tm-img-12.jpg">View more</a>
+                                                <p class="tm-figure-description">Brushbots with mini battery.</p>
+                                                <a href="img/brushbot.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
