--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -278,7 +278,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/progres.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/progress.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Two</span></h2>
                                                 <p class="tm-figure-description">In progress work for DIY music box.</p>
