--- a/webpages/index.html
+++ b/webpages/index.html
@@ -318,7 +318,7 @@
   </section> -->
 
   <!-- Clients -->
-  <section class="py-5">
+  <!-- <section class="py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6">
@@ -343,7 +343,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Contact -->
   <section id="contact">
