--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -328,61 +328,60 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>  
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-06-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/architectural.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Seven</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-06.jpg">View more</a>
+                                                <p class="tm-figure-description">3D print architectural design.</p>
+                                                <a href="img/architectural.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-05-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/lights.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Eight</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-05.jpg">View more</a>
+                                                <p class="tm-figure-description">Testing LED lights.</p>
+                                                <a href="img/lights.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-04-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/switch.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Nine</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-04.jpg">View more</a>
+                                                <p class="tm-figure-description">Installing switches.</p>
+                                                <a href="img/switch.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-03-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/buttons.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Ten</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-03.jpg">View more</a>
+                                                <p class="tm-figure-description">Installing buttons.</p>
+                                                <a href="img/buttons.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
                                     <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-02-tn.jpg" alt="Image" class="img-fluid tm-img">
+s                                            <img src="img/testing neoPixels.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Eleven</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-02.jpg">View more</a>
+                                                <p class="tm-figure-description">Arduino project material testing.</p>
+                                                <a href="img/testing neoPixels.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/signs.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Twelve</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-01.jpg">View more</a>
+                                                <p class="tm-figure-description">Signs on wall.</p>
+                                                <a href="img/signs.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
