--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -401,86 +401,89 @@ s                                            <img src="img/testing neoPixels.JPG
                                     
                                     <div class="tm-img-gallery-info-container">                                    
                                         <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">Third Multi Gallery</span></h2>
-                                        <p class="tm-text"><span class="tm-white">Donec dapibus dui sed nisi fermentum, a sollicitudin lorem fringilla. Integer nec pharetra turpis, eu sagittis ipsum. Cras dignissim lacus dolor.</span>
+                                        <p class="tm-text"><span class="tm-white">Documentations of more project in progress and results.</span>
                                         </p>                                     
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/product.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>One</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
-                                                <a href="img/tm-img-01.jpg">View more</a>
+                                                <p class="tm-figure-description">Collaboration project in progress.</p>
+                                                <a href="img/product.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-06-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/cardboardInstallations.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Two</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-06.jpg">View more</a>
+                                                <p class="tm-figure-description">Maker Faire 2018 project in progress installing cardboard.</p>
+                                                <a href="img/cardboardInstallations.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-13-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/wirings.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Three</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
-                                                <a href="img/tm-img-13.jpg">View more</a>
+                                                <p class="tm-figure-description">Wiring the project together for Maker Faire 2018.</p>
+                                                <a href="img/wirings.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-12-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/finalResult.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Four</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-12.jpg">View more</a>
+                                                <p class="tm-figure-description">Final result and product.</p>
+                                                <a href="img/finalResult.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-05-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/scrambled.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Five</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
-                                                <a href="img/tm-img-05.jpg">View more</a>
+                                                <p class="tm-figure-description">A jigsaw puzzle from architectural design.</p>
+                                                <a href="img/scrambled.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-09-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/neoPixel matrix.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Six</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-09.jpg">View more</a>
+                                                <p class="tm-figure-description">Material in progress.</p>
+                                                <a href="img/neoPixel matrix.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-11-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                        <!-- <figure class="effect-bubba">
+                                            <img src="img/tm-img-11-tn.jpg" alt="Image" class="img-fluid tm-img"> -->
+
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Seven</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
-                                                <a href="img/tm-img-11.jpg">View more</a>
+                                                <iframe width="265" height="226" src="https://www.youtube.com/embed/8JDJEZ-znyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                               <!--  <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
+                                                <a href="img/3D printer.mov">View more</a> -->
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-14-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                        <!-- <figure class="effect-bubba">
+                                            <img src="img/tm-img-14-tn.jpg" alt="Image" class="img-fluid tm-img"> -->
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Eight</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-14.jpg">View more</a>
+                                                <iframe width="260" height="225" src="https://www.youtube.com/embed/stMVDTA3CJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                <!-- <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p> -->
+                                                <!-- <a href="img/tm-img-14.jpg">View more</a> -->
                                             </figcaption>           
                                         </figure>
                                     </div>                                                                                                 
