--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -456,11 +456,11 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/neoPixel matrix.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/neopixel matrix.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Six</span></h2>
                                                 <p class="tm-figure-description">Material in progress.</p>
-                                                <a href="img/neoPixel matrix.JPG">View more</a>
+                                                <a href="img/neopixel matrix.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
