--- a/portfolioSite/index.html
+++ b/portfolioSite/index.html
@@ -106,6 +106,13 @@
       </div>
         </div>
       </div>
+      <div class="item">
+        <img src="revisedLandscape.jpg" alt="Chania" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Edited Landscape</h3>
+          <p>More revision in progress work.</p>
+        </div>
+      </div>
 
       <div class="item">
         <img src="videoShot.jpg" alt="Flower" width="460" height="345">
