--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -559,61 +559,61 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/product.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/person.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>One</span></h2>
-                                                <p class="tm-figure-description">Collaboration project in progress.</p>
-                                                <a href="img/product.JPG">View more</a>
+                                                <p class="tm-figure-description">Interior design model.</p>
+                                                <a href="img/person.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/cardboardInstallations.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/angledView.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Two</span></h2>
-                                                <p class="tm-figure-description">Maker Faire 2018 project in progress installing cardboard.</p>
-                                                <a href="img/cardboardInstallations.JPG">View more</a>
+                                                <p class="tm-figure-description">Differnet angled view.</p>
+                                                <a href="img/angledView.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/wirings.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/room.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Three</span></h2>
-                                                <p class="tm-figure-description">Wiring the project together for Maker Faire 2018.</p>
-                                                <a href="img/wirings.JPG">View more</a>
+                                                <p class="tm-figure-description">Room view</p>
+                                                <a href="img/room.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/finalResult.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/wooden.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Four</span></h2>
-                                                <p class="tm-figure-description">Final result and product.</p>
-                                                <a href="img/finalResult.JPG">View more</a>
+                                                <p class="tm-figure-description">Wooden carved blocks from CNC.</p>
+                                                <a href="img/wooden.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/scrambled.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/blocks.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Five</span></h2>
-                                                <p class="tm-figure-description">A jigsaw puzzle from architectural design.</p>
-                                                <a href="img/scrambled.JPG">View more</a>
+                                                <p class="tm-figure-description">Items for VR essay in progres.</p>
+                                                <a href="img/blocks.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/neopixel matrix.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/floatingBlock.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Six</span></h2>
-                                                <p class="tm-figure-description">Material in progress.</p>
-                                                <a href="img/neopixel matrix.JPG">View more</a>
+                                                <p class="tm-figure-description">Getting ready to deploy.</p>
+                                                <a href="img/floatingBlocks.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
@@ -623,20 +623,20 @@ s                                            <img src="img/testing neoPixels.JPG
 
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Seven</span></h2>
-                                                <iframe width="265" height="226" src="https://www.youtube.com/embed/8JDJEZ-znyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                               <!--  <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
-                                                <a href="img/3D printer.mov">View more</a> -->
+                                                <!-- <iframe width="265" height="226" src="https://www.youtube.com/embed/8JDJEZ-znyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
+                                                <a href="img/3D printer.mov">View more</a> 
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
-                                        <!-- <figure class="effect-bubba">
-                                            <img src="img/tm-img-14-tn.jpg" alt="Image" class="img-fluid tm-img"> -->
+                                        <figure class="effect-bubba">
+                                            <img src="img/ribbons.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Eight</span></h2>
-                                                <iframe width="260" height="225" src="https://www.youtube.com/embed/stMVDTA3CJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                                <!-- <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p> -->
-                                                <!-- <a href="img/tm-img-14.jpg">View more</a> -->
+                                                <!-- <iframe width="260" height="225" src="https://www.youtube.com/embed/stMVDTA3CJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+                                                <p class="tm-figure-description">In progress work for visualization.</p> 
+                                               <a href="img/ribbons.JPG">View more</a> 
                                             </figcaption>           
                                         </figure>
                                     </div>                                                                                                 
