--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -613,19 +613,19 @@ s                                            <img src="img/testing neoPixels.JPG
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Six</span></h2>
                                                 <p class="tm-figure-description">Getting ready to deploy.</p>
-                                                <a href="img/floatingBlocks.JPG">View more</a>
+                                                <a href="img/floatingBlock.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
-                                        <!-- <figure class="effect-bubba">
-                                            <img src="img/tm-img-11-tn.jpg" alt="Image" class="img-fluid tm-img"> -->
+                                        <figure class="effect-bubba">
+                                            <img src="img/revised.jpg" alt="Image" class="img-fluid tm-img">
 
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Seven</span></h2>
                                                 <!-- <iframe width="265" height="226" src="https://www.youtube.com/embed/8JDJEZ-znyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
-                                                <a href="img/3D printer.mov">View more</a> 
+                                                <p class="tm-figure-description">Images of landscape.</p>
+                                                <a href="img/revised.jpg">View more</a> 
                                             </figcaption>           
                                         </figure>
                                     </div>
