update portfolio image site.

--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -400,7 +400,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                 <!-- Gallery Two pop up connected with JS code below -->
                                     
                                     <div class="tm-img-gallery-info-container">                                    
-                                        <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">Third Multi Gallery</span></h2>
+                                        <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">Documentation Page 03</span></h2>
                                         <p class="tm-text"><span class="tm-white">Documentations of more project in progress and results.</span>
                                         </p>                                     
                                     </div>
@@ -553,8 +553,8 @@ s                                            <img src="img/testing neoPixels.JPG
                                 <!-- Gallery Two pop up connected with JS code below -->
                                     
                                     <div class="tm-img-gallery-info-container">                                    
-                                        <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">Third Multi Gallery</span></h2>
-                                        <p class="tm-text"><span class="tm-white">Documentations of more project in progress and results.</span>
+                                        <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">More Documentations</span></h2>
+                                        <p class="tm-text"><span class="tm-white">More documentations of more project in progress and results.</span>
                                         </p>                                     
                                     </div>
                                     <div class="grid-item">
