--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -553,7 +553,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                 <!-- Gallery Two pop up connected with JS code below -->
                                     
                                     <div class="tm-img-gallery-info-container">                                    
-                                        <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">More Documentations</span></h2>
+                                        <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">Documentations Page 04</span></h2>
                                         <p class="tm-text"><span class="tm-white">More documentations of more project in progress and results.</span>
                                         </p>                                     
                                     </div>
