--- a/webpages/index.html
+++ b/webpages/index.html
@@ -381,7 +381,9 @@
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit" href="mailto:michaelwyue@yahoo.com">Send Message</button>
+                <!-- <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit" href="mailto:michaelwyue@yahoo.com">Send Message</button> -->
+                 <a href="mailto:michaelwyue@yahoo.com" class="w3-btn w3-black">Send Message</a>
+                
               </div>
             </div>
           </form>
