--- a/webpages/index.html
+++ b/webpages/index.html
@@ -53,7 +53,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="../imageSlide/index.html">Links</a>
             <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Cover Letter</a>
+            <a class="nav-link js-scroll-trigger" href="coverLetter.pdf">Cover Letter</a>
           </li>
         </ul>
       </div>
