--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -771,13 +771,13 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-11-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                           <!--  <img src="img/tm-img-11-tn.jpg" alt="Image" class="img-fluid tm-img">
 
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Seven</span></h2>
+                                                <h2 class="tm-figure-title">Picture <span>Seven</span></h2> -->
                                                 <!-- <iframe width="265" height="226" src="https://www.youtube.com/embed/8JDJEZ-znyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-                                                <p class="tm-figure-description">Outlining and drafting.</p>
-                                                <a href="img/3D printer.mov">View more</a>
+                                                <!-- <p class="tm-figure-description">Outlining and drafting.</p>
+                                                <a href="img/3D printer.mov">View more</a> -->
                                             </figcaption>           
                                         </figure>
                                     </div>
@@ -793,13 +793,13 @@ s                                            <img src="img/testing neoPixels.JPG
                                         </figure>
                                     </div>
                                     <div class="grid-item">
-                                        <figure class="effect-bubba">
+                                       <!--  <figure class="effect-bubba">
                                             <img src="img/tm-img-14-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Nine</span></h2>
+                                                <h2 class="tm-figure-title">Picture <span>Nine</span></h2> -->
                                                 <!-- <iframe width="260" height="225" src="https://www.youtube.com/embed/stMVDTA3CJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-                                                <p class="tm-figure-description">Putting everything together</p>
-                                                <a href="img/tm-img-14.jpg">View more</a>
+                                                <!-- <p class="tm-figure-description">Putting everything together</p>
+                                                <a href="img/tm-img-14.jpg">View more</a> -->
                                             </figcaption>           
                                         </figure>
                                     </div>
