--- a/webpages/index.html
+++ b/webpages/index.html
@@ -45,7 +45,7 @@
             <a class="nav-link js-scroll-trigger" href="editsCV.pdf">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Bio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="../portfolioSite/index.html">Images</a>
