--- a/webpages/index.html
+++ b/webpages/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link js-scroll-trigger" href="artistStatement.pdf">Artist Statement</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="editsCV.pdf">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="revisions.pdf">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Bio</a>
