--- a/webpages/index.html
+++ b/webpages/index.html
@@ -87,6 +87,7 @@
       </div>
     </div>
   </section> -->
+  <p> Photocredit: VR MeditativeLandscape </p>
 
   <!-- Portfolio Grid -->
   <section class="bg-light" id="portfolio">
