--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -751,11 +751,11 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/scrambled.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/sketch.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Five</span></h2>
-                                                <p class="tm-figure-description">A jigsaw puzzle from architectural design.</p>
-                                                <a href="img/scrambled.JPG">View more</a>
+                                                <p class="tm-figure-description">Rough draft and ideation.</p>
+                                                <a href="img/sketch.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
