--- a/portfolioSite/index.html
+++ b/portfolioSite/index.html
@@ -127,6 +127,14 @@
       </div>
         </div>
       </div>
+
+      <div class="item">
+        <img src="abstract-selfie.jpg" alt="Chania" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Selfie and Portrait</h3>
+          <p>Abstract self portrait</p>
+        </div>
+      </div>
   
     </div>
 
