--- a/portfolioSite/index.html
+++ b/portfolioSite/index.html
@@ -135,6 +135,14 @@
           <p>Abstract self portrait</p>
         </div>
       </div>
+
+      <div class="item">
+        <img src="drawingsConcept.JPG" alt="Chania" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Drawing</h3>
+          <p>Concepts and sketches.</p>
+        </div>
+      </div>
   
     </div>
 
