--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -589,11 +589,11 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/wooden.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/wooden.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Four</span></h2>
-                                                <p class="tm-figure-description">Wooden carved blocks from CNC.</p>
-                                                <a href="img/wooden.JPG">View more</a>
+                                                <p class="tm-figure-description">Singages</p>
+                                                <a href="img/wooden.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
@@ -721,31 +721,31 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/cardboardInstallations.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/facial.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Two</span></h2>
-                                                <p class="tm-figure-description">Maker Faire 2018 project in progress installing cardboard.</p>
-                                                <a href="img/cardboardInstallations.JPG">View more</a>
+                                                <p class="tm-figure-description">Photograph double exposure 01.</p>
+                                                <a href="img/facial.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/wirings.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/exposure.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Three</span></h2>
-                                                <p class="tm-figure-description">Wiring the project together for Maker Faire 2018.</p>
-                                                <a href="img/wirings.JPG">View more</a>
+                                                <p class="tm-figure-description">Double exposure 02.</p>
+                                                <a href="img/exposure.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/finalResult.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/flowers.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Four</span></h2>
-                                                <p class="tm-figure-description">Final result and product.</p>
-                                                <a href="img/finalResult.JPG">View more</a>
+                                                <p class="tm-figure-description">3D Modeling</p>
+                                                <a href="img/flowers.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
