--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -589,11 +589,11 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/wooden.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/wooden.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Four</span></h2>
                                                 <p class="tm-figure-description">Singages</p>
-                                                <a href="img/wooden.jpg">View more</a>
+                                                <a href="img/wooden.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
