dates and medium

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -593,9 +593,9 @@
                 <img class="img-fluid d-block mx-auto" src="img/scape.jpg" alt="">
                 <p>Gazebo and lake</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Southwest</li>
-                  <li>Category: Website Design</li>
+                  <li>Date: April 2019</li>
+                  <li>Medium: Digital</li>
+                  <li>Size: 1712 x 862</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
