--- a/webpages/index.html
+++ b/webpages/index.html
@@ -90,6 +90,7 @@
     </div>
   </section>
   <p> Photocredit: VR MeditativeLandscape </p>
+  <p> Button to Javascript animation link. </p>
   
 
   <!-- Portfolio Grid -->
