--- a/webpages/index.html
+++ b/webpages/index.html
@@ -82,7 +82,7 @@
       </div>
       <div class="row text-center">
 
-          <h1 align=center>Artist Statement</h1>
+          <h1 align="center">Artist Statement</h1>
         <p> How might virtual reality help us to cultivate a healthy frame of mind? And what is the strategy to maintain a healthy mind? I explores these questions through immersive technological tool of virtual reality. In general, virtual reality can be utilized in many ways, ranging from entertainment purposes to mental health purposes. For this project, I primarily focus on mental health health, modeling a natural landscape, explores possibilities of an immersive virtual, yet naturalistic landscape as a way to alleviate stress and improve mental health. Users will experience an invigorating landscape that alleviates the stressful times that they encountered: high quality renderings of a photorealistic landscape are paired with natural sound effects, encompasses the voices of nature, such as a gentle breeze and sounds of birds with wildlife animals.  I am interested in ways that an immersive, virtual experience of nature can further improve mental abilities. The concept of the work is based on the practice of “zen” and other meditative practices for alleviating stressful moments.</p>
         
        
@@ -402,7 +402,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">Copyright &copy; Michael Yue 2019</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
