--- a/webpages/index.html
+++ b/webpages/index.html
@@ -39,7 +39,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#"></a>
+            <a class="nav-link js-scroll-trigger" href="../ImagePage/index.html">Image Lists</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="revisions.pdf">Resume</a>
