--- a/ImagePage/index.html
+++ b/ImagePage/index.html
@@ -41,12 +41,12 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Tempus aliquam veroeros</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>AR Systems</h2>
+							<p>Human animation through Vuforia.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Aliquam ipsum sed dolore</h2>
+							<h2>System processes</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
